change feature importance path for each experiment to be variables

--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -31,7 +31,8 @@
     "best_params_path = paths[model_name]['best_params']\n",
     "model_path_list  = paths[model_name]['models']\n",
     "pred_5folds_path = paths[model_name]['pred_5folds']\n",
-    "shap_fi_path     = paths[model_name]['shap_fi']"
+    "shap_fi_path     = paths[model_name]['shap_fi']\n",
+    "fi_path          = paths[model_name]['feature_importance']"
    ]
   },
   {
@@ -460,7 +461,7 @@
     "    fi_dfs.append(fi_df)\n",
     "\n",
     "feature_importance = average_feature_importances(fi_dfs)\n",
-    "# feature_importance.to_csv('data/xgboost/feature_importance.csv', index=False)\n",
+    "# feature_importance.to_csv(fi_path, index=False)\n",
     "feature_importance"
    ]
   },
