Remove duplicated word MEAN in the printing function

--- a/CB.ipynb
+++ b/CB.ipynb
@@ -213,13 +213,13 @@
       "\t- SPECIFICITY: 0.9310\n",
       "\n",
       "------------------------------\n",
-      "\t- MEAN MEAN_ACCURACY: 0.8791\n",
-      "\t- MEAN MEAN_ROC_AUC: 0.9338\n",
-      "\t- MEAN MEAN_F1_SCORE: 0.8670\n",
-      "\t- MEAN MEAN_MSE: 0.1045\n",
-      "\t- MEAN MEAN_PRECISION: 0.8737\n",
-      "\t- MEAN MEAN_RECALL: 0.8640\n",
-      "\t- MEAN MEAN_SPECIFICITY: 0.8917\n"
+      "\t- MEAN_ACCURACY: 0.8791\n",
+      "\t- MEAN_ROC_AUC: 0.9338\n",
+      "\t- MEAN_F1_SCORE: 0.8670\n",
+      "\t- MEAN_MSE: 0.1045\n",
+      "\t- MEAN_PRECISION: 0.8737\n",
+      "\t- MEAN_RECALL: 0.8640\n",
+      "\t- MEAN_SPECIFICITY: 0.8917\n"
      ]
     }
    ],
