--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -217,13 +217,13 @@
       "\t- SPECIFICITY: 0.8621\n",
       "\n",
       "------------------------------\n",
-      "\t- MEAN MEAN_ACCURACY: 0.8643\n",
-      "\t- MEAN MEAN_ROC_AUC: 0.9220\n",
-      "\t- MEAN MEAN_F1_SCORE: 0.8500\n",
-      "\t- MEAN MEAN_MSE: 0.1121\n",
-      "\t- MEAN MEAN_PRECISION: 0.8556\n",
-      "\t- MEAN MEAN_RECALL: 0.8480\n",
-      "\t- MEAN MEAN_SPECIFICITY: 0.8777\n"
+      "\t- MEAN_ACCURACY: 0.8643\n",
+      "\t- MEAN_ROC_AUC: 0.9220\n",
+      "\t- MEAN_F1_SCORE: 0.8500\n",
+      "\t- MEAN_MSE: 0.1121\n",
+      "\t- MEAN_PRECISION: 0.8556\n",
+      "\t- MEAN_RECALL: 0.8480\n",
+      "\t- MEAN_SPECIFICITY: 0.8777\n"
      ]
     }
    ],
