add import models for CB and XGB notebooks

--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "import optuna\n",
+    "from xgboost import XGBClassifier\n",
     "from utils.preprocessing import *\n",
     "from utils.visualization import *\n",
     "from utils.trainer import *\n",
