--- a/CB.ipynb
+++ b/CB.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "import optuna\n",
+    "from catboost import CatBoostClassifier\n",
     "from utils.preprocessing import *\n",
     "from utils.visualization import *\n",
     "from utils.trainer import *\n",
