add the display of Table 2

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from catboost import CatBoostClassifier\n",
-    "from xgboost import XGBClassifier\n",
-    "from lightgbm import LGBMClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Set default font to sans-serif\n",
+    "plt.rcParams['font.family'] = 'sans-serif'\n",
     "\n",
     "from utils.preprocessing import *\n",
     "from utils.visualization import *\n",
@@ -95,6 +96,129 @@
    "outputs": [],
    "source": [
     "#save_json('data/metrics.json', metric_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table 2. Evaluation Metrics for Six Machine Learning Models Across Five Folds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ACC</th>\n",
+       "      <th>AUC</th>\n",
+       "      <th>F1 Score</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>Specificity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>catboost</th>\n",
+       "      <td>0.8791</td>\n",
+       "      <td>0.9312</td>\n",
+       "      <td>0.8675</td>\n",
+       "      <td>0.8710</td>\n",
+       "      <td>0.864</td>\n",
+       "      <td>0.8919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>xgboost</th>\n",
+       "      <td>0.8645</td>\n",
+       "      <td>0.9202</td>\n",
+       "      <td>0.8514</td>\n",
+       "      <td>0.8548</td>\n",
+       "      <td>0.848</td>\n",
+       "      <td>0.8784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lgbm</th>\n",
+       "      <td>0.8791</td>\n",
+       "      <td>0.9150</td>\n",
+       "      <td>0.8675</td>\n",
+       "      <td>0.8710</td>\n",
+       "      <td>0.864</td>\n",
+       "      <td>0.8919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rf</th>\n",
+       "      <td>0.8388</td>\n",
+       "      <td>0.9097</td>\n",
+       "      <td>0.8295</td>\n",
+       "      <td>0.8045</td>\n",
+       "      <td>0.856</td>\n",
+       "      <td>0.8243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>svm</th>\n",
+       "      <td>0.8168</td>\n",
+       "      <td>0.8985</td>\n",
+       "      <td>0.8031</td>\n",
+       "      <td>0.7907</td>\n",
+       "      <td>0.816</td>\n",
+       "      <td>0.8176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lr</th>\n",
+       "      <td>0.8132</td>\n",
+       "      <td>0.8922</td>\n",
+       "      <td>0.7935</td>\n",
+       "      <td>0.8033</td>\n",
+       "      <td>0.784</td>\n",
+       "      <td>0.8378</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             ACC     AUC  F1 Score  Precision  Recall  Specificity\n",
+       "catboost  0.8791  0.9312    0.8675     0.8710   0.864       0.8919\n",
+       "xgboost   0.8645  0.9202    0.8514     0.8548   0.848       0.8784\n",
+       "lgbm      0.8791  0.9150    0.8675     0.8710   0.864       0.8919\n",
+       "rf        0.8388  0.9097    0.8295     0.8045   0.856       0.8243\n",
+       "svm       0.8168  0.8985    0.8031     0.7907   0.816       0.8176\n",
+       "lr        0.8132  0.8922    0.7935     0.8033   0.784       0.8378"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metric_df = pd.DataFrame(metric_dict).T\n",
+    "metric_df = round(metric_df, 4)\n",
+    "metric_df.drop(columns='mse', inplace=True)\n",
+    "metric_df.columns = ['ACC', 'AUC', 'F1 Score', 'Precision', 'Recall', 'Specificity']\n",
+    "metric_df"
    ]
   },
   {
