update predict notebook

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -233,289 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>CatBoost</th>\n",
-       "      <th>XGBoost</th>\n",
-       "      <th>LGBM</th>\n",
-       "      <th>RF</th>\n",
-       "      <th>SVM</th>\n",
-       "      <th>LR</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Feature</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Age</th>\n",
-       "      <td>0.164956</td>\n",
-       "      <td>0.361213</td>\n",
-       "      <td>0.404303</td>\n",
-       "      <td>0.098084</td>\n",
-       "      <td>0.230439</td>\n",
-       "      <td>0.088079</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BAEP</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.002840</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000130</td>\n",
-       "      <td>0.032059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Breastfeeding</th>\n",
-       "      <td>0.306618</td>\n",
-       "      <td>0.225053</td>\n",
-       "      <td>0.416595</td>\n",
-       "      <td>0.139646</td>\n",
-       "      <td>0.068921</td>\n",
-       "      <td>0.146254</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cortical_MRI</th>\n",
-       "      <td>0.084516</td>\n",
-       "      <td>0.139903</td>\n",
-       "      <td>0.230317</td>\n",
-       "      <td>0.172330</td>\n",
-       "      <td>0.091708</td>\n",
-       "      <td>0.069077</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gender</th>\n",
-       "      <td>0.194265</td>\n",
-       "      <td>0.280718</td>\n",
-       "      <td>0.312571</td>\n",
-       "      <td>0.197502</td>\n",
-       "      <td>0.177869</td>\n",
-       "      <td>0.190128</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Infratentorial_MRI</th>\n",
-       "      <td>0.432188</td>\n",
-       "      <td>0.606201</td>\n",
-       "      <td>0.587345</td>\n",
-       "      <td>0.634443</td>\n",
-       "      <td>0.561526</td>\n",
-       "      <td>0.602566</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LLSSEP</th>\n",
-       "      <td>0.049179</td>\n",
-       "      <td>0.105270</td>\n",
-       "      <td>0.227288</td>\n",
-       "      <td>0.187239</td>\n",
-       "      <td>0.099640</td>\n",
-       "      <td>0.097031</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mono_Symptomatic</th>\n",
-       "      <td>0.026377</td>\n",
-       "      <td>0.329450</td>\n",
-       "      <td>0.450662</td>\n",
-       "      <td>0.017893</td>\n",
-       "      <td>0.159277</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Oligoclonal_Bands</th>\n",
-       "      <td>0.618767</td>\n",
-       "      <td>0.476234</td>\n",
-       "      <td>0.460722</td>\n",
-       "      <td>0.585977</td>\n",
-       "      <td>0.580946</td>\n",
-       "      <td>0.475011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Periventricular_MRI</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.800142</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Poly_Symptomatic</th>\n",
-       "      <td>0.063108</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.102098</td>\n",
-       "      <td>0.007502</td>\n",
-       "      <td>0.045763</td>\n",
-       "      <td>0.277810</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Schooling</th>\n",
-       "      <td>0.286704</td>\n",
-       "      <td>0.549610</td>\n",
-       "      <td>0.712546</td>\n",
-       "      <td>0.278670</td>\n",
-       "      <td>0.456286</td>\n",
-       "      <td>0.455841</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Spinal_Cord_MRI</th>\n",
-       "      <td>0.093225</td>\n",
-       "      <td>0.068911</td>\n",
-       "      <td>0.127860</td>\n",
-       "      <td>0.047863</td>\n",
-       "      <td>0.031063</td>\n",
-       "      <td>0.043335</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Symptom_Motor</th>\n",
-       "      <td>0.204540</td>\n",
-       "      <td>0.340563</td>\n",
-       "      <td>0.538114</td>\n",
-       "      <td>0.272040</td>\n",
-       "      <td>0.395381</td>\n",
-       "      <td>0.660520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Symptom_Other</th>\n",
-       "      <td>0.096387</td>\n",
-       "      <td>0.294541</td>\n",
-       "      <td>0.529758</td>\n",
-       "      <td>0.202904</td>\n",
-       "      <td>0.346926</td>\n",
-       "      <td>0.539234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Symptom_Sensory</th>\n",
-       "      <td>0.153595</td>\n",
-       "      <td>0.268016</td>\n",
-       "      <td>0.440176</td>\n",
-       "      <td>0.094757</td>\n",
-       "      <td>0.293022</td>\n",
-       "      <td>0.491765</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Symptom_Vision</th>\n",
-       "      <td>0.125136</td>\n",
-       "      <td>0.165928</td>\n",
-       "      <td>0.341265</td>\n",
-       "      <td>0.044528</td>\n",
-       "      <td>0.058581</td>\n",
-       "      <td>0.374241</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ULSSEP</th>\n",
-       "      <td>0.080312</td>\n",
-       "      <td>0.098082</td>\n",
-       "      <td>0.117468</td>\n",
-       "      <td>0.119152</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VEP</th>\n",
-       "      <td>0.136903</td>\n",
-       "      <td>0.160656</td>\n",
-       "      <td>0.129461</td>\n",
-       "      <td>0.137727</td>\n",
-       "      <td>0.124075</td>\n",
-       "      <td>0.137797</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Varicella</th>\n",
-       "      <td>0.173855</td>\n",
-       "      <td>0.207317</td>\n",
-       "      <td>0.078650</td>\n",
-       "      <td>0.197104</td>\n",
-       "      <td>0.226627</td>\n",
-       "      <td>0.075631</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     CatBoost   XGBoost      LGBM        RF       SVM  \\\n",
-       "Feature                                                                 \n",
-       "Age                  0.164956  0.361213  0.404303  0.098084  0.230439   \n",
-       "BAEP                 0.000000  0.002840  0.000000  0.000000  0.000130   \n",
-       "Breastfeeding        0.306618  0.225053  0.416595  0.139646  0.068921   \n",
-       "Cortical_MRI         0.084516  0.139903  0.230317  0.172330  0.091708   \n",
-       "Gender               0.194265  0.280718  0.312571  0.197502  0.177869   \n",
-       "Infratentorial_MRI   0.432188  0.606201  0.587345  0.634443  0.561526   \n",
-       "LLSSEP               0.049179  0.105270  0.227288  0.187239  0.099640   \n",
-       "Mono_Symptomatic     0.026377  0.329450  0.450662  0.017893  0.159277   \n",
-       "Oligoclonal_Bands    0.618767  0.476234  0.460722  0.585977  0.580946   \n",
-       "Periventricular_MRI  1.000000  1.000000  1.000000  1.000000  1.000000   \n",
-       "Poly_Symptomatic     0.063108  0.000000  0.102098  0.007502  0.045763   \n",
-       "Schooling            0.286704  0.549610  0.712546  0.278670  0.456286   \n",
-       "Spinal_Cord_MRI      0.093225  0.068911  0.127860  0.047863  0.031063   \n",
-       "Symptom_Motor        0.204540  0.340563  0.538114  0.272040  0.395381   \n",
-       "Symptom_Other        0.096387  0.294541  0.529758  0.202904  0.346926   \n",
-       "Symptom_Sensory      0.153595  0.268016  0.440176  0.094757  0.293022   \n",
-       "Symptom_Vision       0.125136  0.165928  0.341265  0.044528  0.058581   \n",
-       "ULSSEP               0.080312  0.098082  0.117468  0.119152  0.000000   \n",
-       "VEP                  0.136903  0.160656  0.129461  0.137727  0.124075   \n",
-       "Varicella            0.173855  0.207317  0.078650  0.197104  0.226627   \n",
-       "\n",
-       "                           LR  \n",
-       "Feature                        \n",
-       "Age                  0.088079  \n",
-       "BAEP                 0.032059  \n",
-       "Breastfeeding        0.146254  \n",
-       "Cortical_MRI         0.069077  \n",
-       "Gender               0.190128  \n",
-       "Infratentorial_MRI   0.602566  \n",
-       "LLSSEP               0.097031  \n",
-       "Mono_Symptomatic     1.000000  \n",
-       "Oligoclonal_Bands    0.475011  \n",
-       "Periventricular_MRI  0.800142  \n",
-       "Poly_Symptomatic     0.277810  \n",
-       "Schooling            0.455841  \n",
-       "Spinal_Cord_MRI      0.043335  \n",
-       "Symptom_Motor        0.660520  \n",
-       "Symptom_Other        0.539234  \n",
-       "Symptom_Sensory      0.491765  \n",
-       "Symptom_Vision       0.374241  \n",
-       "ULSSEP               0.000000  \n",
-       "VEP                  0.137797  \n",
-       "Varicella            0.075631  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get top 5 SHAP feature importance for each model\n",
     "scaler = MinMaxScaler()\n",
@@ -533,8 +253,7 @@
     "    fi_list.append(fi_normalized)\n",
     "\n",
     "fi_df = pd.concat(fi_list, axis=1)\n",
-    "fi_df.columns = [['CatBoost', 'XGBoost', 'LGBM', 'RF', 'SVM', 'LR']]\n",
-    "fi_df"
+    "fi_df.columns = [['CatBoost', 'XGBoost', 'LGBM', 'RF', 'SVM', 'LR']]"
    ]
   },
   {
