rename utils package to src

--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -15,11 +15,11 @@
    "source": [
     "import optuna\n",
     "from xgboost import XGBClassifier\n",
-    "from utils.preprocessing import *\n",
-    "from utils.visualization import *\n",
-    "from utils.trainer import *\n",
-    "from utils.helpers import *\n",
-    "from utils.config import *"
+    "from src.preprocessing import *\n",
+    "from src.visualization import *\n",
+    "from src.trainer import *\n",
+    "from src.helpers import *\n",
+    "from src.config import *"
    ]
   },
   {
