--- a/predict.ipynb
+++ b/predict.ipynb
@@ -17,11 +17,11 @@
     "from matplotlib import rcParams\n",
     "rcParams['font.family'] = 'serif'\n",
     "\n",
-    "from utils.preprocessing import *\n",
-    "from utils.visualization import *\n",
-    "from utils.trainer import *\n",
-    "from utils.config import *\n",
-    "from utils.helpers import *"
+    "from src.preprocessing import *\n",
+    "from src.visualization import *\n",
+    "from src.trainer import *\n",
+    "from src.config import *\n",
+    "from src.helpers import *"
    ]
   },
   {
