--- a/explain.ipynb
+++ b/explain.ipynb
@@ -20,11 +20,11 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "from utils.preprocessing import *\n",
-    "from utils.visualization import *\n",
-    "from utils.trainer import *\n",
-    "from utils.helpers import *\n",
-    "from utils.config import *"
+    "from src.preprocessing import *\n",
+    "from src.visualization import *\n",
+    "from src.trainer import *\n",
+    "from src.helpers import *\n",
+    "from src.config import *"
    ]
   },
   {
