move notebooks to notebooks folder

--- a/notebooks/LGBM.ipynb
+++ b/notebooks/LGBM.ipynb
@@ -13,6 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add the parent directory to the sys.path to avoid 'ModuleNotFoundError'\n",
+    "sys.path.append(os.path.abspath(os.path.join('..')))\n",
+    "\n",
     "import optuna\n",
     "from lightgbm import LGBMClassifier\n",
     "from src.preprocessing import *\n",
@@ -166,13 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 1/5:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fold 1/5:\n",
       "\t- ACCURACY: 0.8000\n",
       "\t- ROC_AUC: 0.8787\n",
       "\t- F1_SCORE: 0.7660\n",
@@ -491,7 +491,7 @@
    "source": [
     "analyzed_dfs = []\n",
     "\n",
-    "for fold in range(1, 6):\n",
+    "for fold in range(5):\n",
     "    # Load data for the current fold\n",
     "    X_train, y_train, X_val, y_val = load_data_fold(fold)\n",
     "\n",
@@ -706,7 +706,7 @@
    "source": [
     "import shap\n",
     "\n",
-    "models = [load_model_fold(fold+1, model_name) for fold in range(5)]\n",
+    "models = [load_model_fold(fold, model_name) for fold in range(5)]\n",
     "shap_values_folds = []\n",
     "\n",
     "for fold in range(5):\n",
