--- a/notebooks/XGBoost.ipynb
+++ b/notebooks/XGBoost.ipynb
@@ -13,6 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add the parent directory to the sys.path to avoid 'ModuleNotFoundError'\n",
+    "sys.path.append(os.path.abspath(os.path.join('..')))\n",
+    "\n",
     "import optuna\n",
     "from xgboost import XGBClassifier\n",
     "from src.preprocessing import *\n",
@@ -489,7 +495,7 @@
    "source": [
     "analyzed_dfs = []\n",
     "\n",
-    "for fold in range(1, 6):\n",
+    "for fold in range(5):\n",
     "    # Load data for the current fold\n",
     "    X_train, y_train, X_val, y_val = load_data_fold(fold)\n",
     "\n",
@@ -553,9 +559,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Gender</td>\n",
-       "      <td>0.337507</td>\n",
+       "      <th>10</th>\n",
+       "      <td>Periventricular_MRI</td>\n",
+       "      <td>1.110448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Infratentorial_MRI</td>\n",
+       "      <td>0.687271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Schooling</td>\n",
+       "      <td>0.626459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Oligoclonal_Bands</td>\n",
+       "      <td>0.547609</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -563,9 +584,29 @@
        "      <td>0.424008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Schooling</td>\n",
-       "      <td>0.626459</td>\n",
+       "      <th>16</th>\n",
+       "      <td>Symptom_Motor</td>\n",
+       "      <td>0.401817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Mono_Symptomatic</td>\n",
+       "      <td>0.389875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Symptom_Other</td>\n",
+       "      <td>0.352361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gender</td>\n",
+       "      <td>0.337507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Symptom_Sensory</td>\n",
+       "      <td>0.323858</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -578,9 +619,19 @@
        "      <td>0.258630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Oligoclonal_Bands</td>\n",
-       "      <td>0.547609</td>\n",
+       "      <th>14</th>\n",
+       "      <td>Symptom_Vision</td>\n",
+       "      <td>0.214153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>VEP</td>\n",
+       "      <td>0.208488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Cortical_MRI</td>\n",
+       "      <td>0.186187</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -593,59 +644,14 @@
        "      <td>0.141246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>VEP</td>\n",
-       "      <td>0.208488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>BAEP</td>\n",
-       "      <td>0.038899</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Periventricular_MRI</td>\n",
-       "      <td>1.110448</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Cortical_MRI</td>\n",
-       "      <td>0.186187</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Infratentorial_MRI</td>\n",
-       "      <td>0.687271</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Spinal_Cord_MRI</td>\n",
        "      <td>0.109899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Symptom_Vision</td>\n",
-       "      <td>0.214153</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Symptom_Sensory</td>\n",
-       "      <td>0.323858</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Symptom_Motor</td>\n",
-       "      <td>0.401817</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Symptom_Other</td>\n",
-       "      <td>0.352361</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Mono_Symptomatic</td>\n",
-       "      <td>0.389875</td>\n",
+       "      <th>9</th>\n",
+       "      <td>BAEP</td>\n",
+       "      <td>0.038899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -658,25 +664,25 @@
       ],
       "text/plain": [
        "                Feature  Importance\n",
-       "0                Gender    0.337507\n",
-       "1                   Age    0.424008\n",
+       "10  Periventricular_MRI    1.110448\n",
+       "12   Infratentorial_MRI    0.687271\n",
        "2             Schooling    0.626459\n",
+       "5     Oligoclonal_Bands    0.547609\n",
+       "1                   Age    0.424008\n",
+       "16        Symptom_Motor    0.401817\n",
+       "18     Mono_Symptomatic    0.389875\n",
+       "17        Symptom_Other    0.352361\n",
+       "0                Gender    0.337507\n",
+       "15      Symptom_Sensory    0.323858\n",
        "3         Breastfeeding    0.277690\n",
        "4             Varicella    0.258630\n",
-       "5     Oligoclonal_Bands    0.547609\n",
+       "14       Symptom_Vision    0.214153\n",
+       "8                   VEP    0.208488\n",
+       "11         Cortical_MRI    0.186187\n",
        "6                LLSSEP    0.148970\n",
        "7                ULSSEP    0.141246\n",
-       "8                   VEP    0.208488\n",
-       "9                  BAEP    0.038899\n",
-       "10  Periventricular_MRI    1.110448\n",
-       "11         Cortical_MRI    0.186187\n",
-       "12   Infratentorial_MRI    0.687271\n",
        "13      Spinal_Cord_MRI    0.109899\n",
-       "14       Symptom_Vision    0.214153\n",
-       "15      Symptom_Sensory    0.323858\n",
-       "16        Symptom_Motor    0.401817\n",
-       "17        Symptom_Other    0.352361\n",
-       "18     Mono_Symptomatic    0.389875\n",
+       "9                  BAEP    0.038899\n",
        "19     Poly_Symptomatic    0.035847"
       ]
      },
@@ -688,20 +694,30 @@
    "source": [
     "import shap\n",
     "\n",
-    "models = [load_model_fold(fold+1, model_name) for fold in range(5)]\n",
+    "models = [load_model_fold(fold, model_name) for fold in range(5)]\n",
     "shap_values_folds = []\n",
+    "interaction_values = []\n",
     "\n",
     "for fold in range(5):\n",
     "    model = models[fold]\n",
     "    X_val = X_val_list[fold]\n",
     "\n",
+    "    # Explainer\n",
     "    explainer = shap.TreeExplainer(model)\n",
+    "\n",
+    "    # SHAP values\n",
     "    sv = explainer.shap_values(X_val)\n",
     "    mean_sv = np.mean(np.abs(sv), axis=0)\n",
     "    shap_values_folds.append(mean_sv)\n",
     "\n",
+    "    # SHAP interaction values\n",
+    "    iv = explainer.shap_interaction_values(X_val)\n",
+    "    mean_iv = np.mean(np.abs(iv), axis=0)\n",
+    "    interaction_values.append(mean_iv)\n",
+    "\n",
     "# Aggregate SHAP values across folds\n",
     "aggregated_shap_values = np.mean(shap_values_folds, axis=0)\n",
+    "aggregated_interaction_values = np.mean(interaction_values, axis=0)\n",
     "\n",
     "# Calculate mean absolute SHAP values for feature importance\n",
     "feature_names = X_val_list[0].columns.to_list()\n",
@@ -711,8 +727,8 @@
     "})\n",
     "\n",
     "# Sort by importance\n",
-    "#shap_feature_importance.sort_values(by='Importance', ascending=False, inplace=True)\n",
-    "shap_feature_importance.to_csv(shap_fi_path, index=False)\n",
+    "shap_feature_importance.sort_values(by='Importance', ascending=False, inplace=True)\n",
+    "#shap_feature_importance.to_csv(shap_fi_path, index=False)\n",
     "shap_feature_importance"
    ]
   },
