--- a/notebooks/CB.ipynb
+++ b/notebooks/CB.ipynb
@@ -25,8 +25,7 @@
     "from src.visualization import *\n",
     "from src.trainer import *\n",
     "from src.config import *\n",
-    "from src.helpers import *\n",
-    "from src.paths import *"
+    "from src.helpers import *"
    ]
   },
   {
@@ -480,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +684,7 @@
        "9                  BAEP    0.008715"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
