update predict notebook

--- a/notebooks/predict.ipynb
+++ b/notebooks/predict.ipynb
@@ -6,6 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add the parent directory to the sys.path to avoid 'ModuleNotFoundError'\n",
+    "sys.path.append(os.path.abspath(os.path.join('..')))\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,7 +27,8 @@
     "from src.visualization import *\n",
     "from src.trainer import *\n",
     "from src.config import *\n",
-    "from src.helpers import *"
+    "from src.helpers import *\n",
+    "from src.paths import paths"
    ]
   },
   {
@@ -42,7 +49,9 @@
     "y_val_full = []\n",
     "for y_val_fold in y_val_list:\n",
     "    y_val_full.extend(y_val_fold)\n",
-    "assert len(y_val_full) == 273"
+    "assert len(y_val_full) == 273\n",
+    "\n",
+    "n_folds = 5"
    ]
   },
   {
@@ -51,31 +60,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_names = ['catboost', 'xgboost', 'lgbm', 'rf', 'svm', 'lr']\n",
-    "n_folds = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Get metrics for all models accross all folds\n",
     "pred_dict = {}\n",
     "pred_proba_dict = {}\n",
     "metric_dict = {}\n",
     "\n",
-    "for model_name in model_names:\n",
+    "for model_name in MODEL_NAMES:\n",
     "    pred_list = []\n",
     "    pred_proba_list = []\n",
     "\n",
     "    for fold in range(n_folds):\n",
     "        # Load data for the current fold\n",
-    "        X_train, y_train, X_val, y_val = load_data_fold(fold+1)\n",
+    "        X_train, y_train, X_val, y_val = load_data_fold(fold)\n",
     "\n",
     "        # Load trained model for the current fold\n",
-    "        model = load_model_fold(fold+1, model_name=model_name)\n",
+    "        model = load_model_fold(fold, model_name=model_name)\n",
     "\n",
     "        # Get predictions for the current fold\n",
     "        y_pred = model.predict(X_val)\n",
@@ -94,11 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#save_json('data/metrics.json', metric_dict)"
+    "save_json(paths.get('metrics'), metric_dict)"
    ]
   },
   {
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +210,7 @@
        "lr        0.8132  0.8922    0.7935     0.8033   0.784       0.8378"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +240,7 @@
     "scaler = MinMaxScaler()\n",
     "fi_list = []\n",
     "\n",
-    "for model_name in model_names:\n",
+    "for model_name in MODEL_NAMES:\n",
     "    # Get model's SHAP feature importance sroted by Feature name alphabetically\n",
     "    fi = pd.read_csv(paths[model_name]['shap_fi'])\\\n",
     "            .sort_values('Feature')\\\n",
@@ -258,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +285,7 @@
     "plt.ylabel('')\n",
     "plt.xlabel('')\n",
     "plt.tight_layout()\n",
-    "plt.savefig('img/fig5.jpeg', format='jpeg', dpi=720)"
+    "plt.savefig('../img/fig5.jpeg', format='jpeg', dpi=720)"
    ]
   },
   {
