move explain notebook + replace png with jpeg images

--- a/notebooks/predict.ipynb
+++ b/notebooks/predict.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_json(paths.get('metrics'), metric_dict)"
+    "save_json(paths.get('metric_path'), metric_dict)"
    ]
   },
   {
