--- a/notebooks/CB.ipynb
+++ b/notebooks/CB.ipynb
@@ -56,12 +56,12 @@
    "outputs": [],
    "source": [
     "# Get lists of data by folds\n",
-    "X_train_list = [pd.read_csv(path) for path in X_train_paths]\n",
-    "y_train_list = [pd.read_csv(path) for path in y_train_paths]\n",
+    "X_train_list = [pd.read_csv(path) for path in paths.get('X_train_paths')]\n",
+    "y_train_list = [pd.read_csv(path) for path in paths.get('y_train_paths')]\n",
     "y_train_list = [y_train[TARGET].to_numpy() for y_train in y_train_list]\n",
     "\n",
-    "X_val_list   = [pd.read_csv(path) for path in X_val_paths]\n",
-    "y_val_list   = [pd.read_csv(path) for path in y_val_paths]\n",
+    "X_val_list   = [pd.read_csv(path) for path in paths.get('X_val_paths')]\n",
+    "y_val_list   = [pd.read_csv(path) for path in paths.get('y_val_paths')]\n",
     "y_val_list   = [y_val[TARGET].to_numpy() for y_val in y_val_list]"
    ]
   },
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
        "9                  BAEP    0.008715"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
