--- a/notebooks/predict.ipynb
+++ b/notebooks/predict.ipynb
@@ -38,12 +38,12 @@
    "outputs": [],
    "source": [
     "# Get lists of data by folds\n",
-    "X_train_list = [pd.read_csv(path) for path in X_train_paths]\n",
-    "y_train_list = [pd.read_csv(path) for path in y_train_paths]\n",
+    "X_train_list = [pd.read_csv(path) for path in paths.get('X_train_paths')]\n",
+    "y_train_list = [pd.read_csv(path) for path in paths.get('y_train_paths')]\n",
     "y_train_list = [y_train[TARGET].to_numpy() for y_train in y_train_list]\n",
     "\n",
-    "X_val_list   = [pd.read_csv(path) for path in X_val_paths]\n",
-    "y_val_list   = [pd.read_csv(path) for path in y_val_paths]\n",
+    "X_val_list   = [pd.read_csv(path) for path in paths.get('X_val_paths')]\n",
+    "y_val_list   = [pd.read_csv(path) for path in paths.get('y_val_paths')]\n",
     "y_val_list   = [y_val[TARGET].to_numpy() for y_val in y_val_list]\n",
     "\n",
     "y_val_full = []\n",
