add metrics by folds

--- a/notebooks/predict.ipynb
+++ b/notebooks/predict.ipynb
@@ -63,11 +63,13 @@
     "# Get metrics for all models accross all folds\n",
     "pred_dict = {}\n",
     "pred_proba_dict = {}\n",
-    "metric_dict = {}\n",
+    "metric_dict = {} # metrics for each model on all folds\n",
+    "metric_fold_dict = {} # metrics for each model on each fold\n",
     "\n",
     "for model_name in MODEL_NAMES:\n",
     "    pred_list = []\n",
     "    pred_proba_list = []\n",
+    "    metric_list = []\n",
     "\n",
     "    for fold in range(n_folds):\n",
     "        # Load data for the current fold\n",
@@ -82,13 +84,17 @@
     "\n",
     "        pred_list.extend(y_pred)\n",
     "        pred_proba_list.extend(y_pred_proba)\n",
+    "\n",
+    "        metric_fold = calculate_metrics(y_val, y_pred, y_pred_proba)\n",
+    "        metric_list.append(metric_fold)\n",
     "    \n",
     "    # Save predictions for this model\n",
     "    pred_dict[model_name] = pred_list\n",
     "    pred_proba_dict[model_name] = pred_proba_list\n",
     "\n",
     "    # Save metrics for this model\n",
-    "    metric_dict[model_name] = calculate_metrics(y_val_full, pred_list, pred_proba_list)"
+    "    metric_dict[model_name] = calculate_metrics(y_val_full, pred_list, pred_proba_list)\n",
+    "    metric_fold_dict[model_name] = metric_list"
    ]
   },
   {
@@ -97,6 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "save_json(paths.get('metric_fold_path'), metric_fold_dict)\n",
     "save_json(paths.get('metric_path'), metric_dict)"
    ]
   },
