add format text .2f to feature importance heatmap in explain notebook

--- a/notebooks/explain.ipynb
+++ b/notebooks/explain.ipynb
@@ -517,7 +517,7 @@
     "\n",
     "# Create a heatmap\n",
     "plt.figure(figsize=(10, 8))\n",
-    "sns.heatmap(heatmap_data, annot=True, cmap=\"Blues\", linewidths=.5, cbar=False)\n",
+    "sns.heatmap(heatmap_data, annot=True, cmap=\"Blues\", linewidths=.5, cbar=False, fmt=\".2f\")\n",
     "plt.ylabel('')\n",
     "\n",
     "# Save and show the plot\n",
