--- a/notebooks/predict.ipynb
+++ b/notebooks/predict.ipynb
@@ -89,8 +89,8 @@
     "        metric_list.append(metric_fold)\n",
     "    \n",
     "    # Save predictions for this model\n",
-    "    pred_dict[model_name] = pred_list\n",
-    "    pred_proba_dict[model_name] = pred_proba_list\n",
+    "    pred_dict[model_name] = [float(x) for x in pred_list]\n",
+    "    pred_proba_dict[model_name] = [float(x) for x in pred_proba_list]\n",
     "\n",
     "    # Save metrics for this model\n",
     "    metric_dict[model_name] = calculate_metrics(y_val_full, pred_list, pred_proba_list)\n",
@@ -104,7 +104,9 @@
    "outputs": [],
    "source": [
     "save_json(paths.get('metric_fold_path'), metric_fold_dict)\n",
-    "save_json(paths.get('metric_path'), metric_dict)"
+    "save_json(paths.get('metric_path'), metric_dict)\n",
+    "save_json(paths.get('pred_path'), pred_dict)\n",
+    "save_json(paths.get('pred_proba_path'), pred_proba_dict)"
    ]
   },
   {
@@ -292,7 +294,7 @@
     "plt.ylabel('')\n",
     "plt.xlabel('')\n",
     "plt.tight_layout()\n",
-    "plt.savefig('../img/fig5.jpeg', format='jpeg', dpi=720)"
+    "#plt.savefig('../img/fig5.jpeg', format='jpeg', dpi=720)"
    ]
   },
   {
